# yago

./: CMakeLists.txt  README.md  yago.cxx  yago.hxx
yago/: envelop.hxx  functional.hxx  oscillator.hxx  sigelem.hxx
