CMAKE_MINIMUM_REQUIRED(VERSION 2.4)
SET(CMAKE_CXX_FLAGS_RELEASE "-std=c++0x -Wall -O2")
SET(CMAKE_CXX_FLAGS_DEBUG "-std=c++0x -g")
SET(CMAKE_BUILD_TYPE Release)

PROJECT(libyago CXX)
SET(serial "0.1.0")
SET(soserial "1")
INCLUDE_DIRECTORIES("${PROJECT_SOURCE_DIR}")
ADD_LIBRARY(yago SHARED yago.cxx)
SET_TARGET_PROPERTIES(yago PROPERTIES VERSION ${serial} SOVERSION ${soserial})
INSTALL(TARGETS yago LIBRARY DESTINATION lib)
INSTALL(FILES yago.h DESTINATION include)
