CMAKE_MINIMUM_REQUIRED(VERSION 2.4)
SET(CMAKE_CXX_FLAGS_RELEASE "-std=c++0x -Wall -O2")
SET(CMAKE_CXX_FLAGS_DEBUG "-std=c++0x -g")
SET(CMAKE_BUILD_TYPE Release)

PROJECT(libyago CXX)
SET(serial "0.2.0")
SET(soserial "1")
INSTALL(FILES yago.hxx DESTINATION include)
FILE(GLOB hfiles "${PROJECT_SOURCE_DIR}/yago/*.hxx")
INSTALL(FILES ${hfiles} DESTINATION include/yago)
